modules/lib/dependencies/openh264/cobalt_h264_shim.h

/*
 * Encoder usage-type selectors for cobalt_h264_encoder_create. The values match
 * openh264's EUsageType enumerators so the meaning is unambiguous, but the enum
 * itself never crosses the boundary:
 *
 *   0 = camera video, real-time communication (openh264 CAMERA_VIDEO_REAL_TIME)
 *   1 = screen content, real-time         (openh264 SCREEN_CONTENT_REAL_TIME)
 *
 * The calls codec always opens with the camera real-time usage type.
 */
#define COBALT_H264_USAGE_CAMERA_REALTIME 0
#define COBALT_H264_USAGE_SCREEN_REALTIME 1
/*
 * Rate-control mode selectors for cobalt_h264_encoder_create. The values match
 * openh264's RC_MODES enumerators, but the enum is built C-side:
 *
 *   0 = quality mode      (openh264 RC_QUALITY_MODE)
 *   1 = bitrate mode      (openh264 RC_BITRATE_MODE)
 *   2 = buffer-based mode (openh264 RC_BUFFERBASED_MODE)
 *   3 = timestamp mode    (openh264 RC_TIMESTAMP_MODE)
 *  -1 = rate control off  (openh264 RC_OFF_MODE)
 *
 * The calls codec always opens in bitrate mode.
 */
#define COBALT_H264_RC_QUALITY     0
#define COBALT_H264_RC_BITRATE     1
#define COBALT_H264_RC_BUFFERBASED 2
#define COBALT_H264_RC_TIMESTAMP   3
/*
 * Complexity-mode selectors for cobalt_h264_encoder_create. The values match
 * openh264's ECOMPLEXITY_MODE enumerators, but the enum is built C-side:
 *
 *   0 = lowest complexity, fastest  (openh264 LOW_COMPLEXITY)
 *   1 = medium complexity, medium   (openh264 MEDIUM_COMPLEXITY)
 *   2 = high complexity, slowest    (openh264 HIGH_COMPLEXITY)
 */
#define COBALT_H264_COMPLEXITY_LOW    0
#define COBALT_H264_COMPLEXITY_MEDIUM 1
#define COBALT_H264_COMPLEXITY_HIGH   2
/*
 * Status codes returned by the create/encode/get/decode entry points. These are
 * STABLE shim-level values, NOT raw openh264 returns: openh264's vtable methods
 * return a CM_RETURN int (0 success) for the encoder and a DECODING_STATE bitmask
 * (0 == dsErrorFree success) for the decoder, neither of which is a portable,
 * stable surface. The shim maps every native success to COBALT_H264_OK, surfaces
 * shim-level misuse and allocation failures as the negative codes below, and
 * forwards any non-zero native failure as COBALT_H264_NATIVE_ERROR; the original
 * native code is recoverable through cobalt_h264_last_native_status.
 *
 *   COBALT_H264_OK            0  operation succeeded
 *   COBALT_H264_BAD_PARAM    -1  invalid argument supplied to the shim
 *   COBALT_H264_NOMEM        -2  allocation failed inside the shim
 *   COBALT_H264_CREATE_FAIL  -3  Wels create entry point failed or returned null
 *   COBALT_H264_NATIVE_ERROR -4  an openh264 vtable method reported a failure
 */
#define COBALT_H264_OK            0
/**
 * Returns the openh264 codec version string.
 *
 * The wrapper reads the OpenH264Version returned by WelsGetCodecVersion C-side
 * and formats it into a static "major.minor.revision" buffer. The returned
 * pointer is static and must not be freed.
 *
 * @return a NUL-terminated version string such as "2.4.1".
 */
const char *cobalt_h264_version(void);
/**
 * Creates an openh264 encoder for one stream, building the SEncParamExt C-side
 * from the supplied portable scalars and initializing the encoder with it.
 *
 * The wrapper calls WelsCreateSVCEncoder, then drives the encoder vtable: it
 * reads GetDefaultParams into a C-side SEncParamExt, stamps that block from the
 * arguments (the usage type from usageType, the picture dimensions, the target
 * and ceiling bitrates, the maximum frame rate, the rate-control mode from
 * rcMode, a single spatial layer and temporalLayers temporal layers, the intra
 * period from intraPeriod, the complexity mode from complexity, the frame-skip
 * toggle, the qp window from minQp and maxQp, the IDR bitrate ratio, and the
 * long-term-reference toggle, mirroring the dimensions, frame rate and bitrates
 * onto spatial layer 0 as openh264 requires alongside the top-level fields),
 * then calls InitializeExt. The color format is fixed to I420, which is the only
 * format the calls encode path feeds. The created encoder is returned through
 * outCtx as an opaque handle.
 *
 * @param width             the picture width in pixels.
 * @param height            the picture height in pixels.
 * @param targetBitrateBps  the target bitrate in bits per second.
 * @param maxBitrateBps     the ceiling bitrate in bits per second.
 * @param frameRate         the maximum frame rate in frames per second.
 * @param usageType         one of COBALT_H264_USAGE_* selecting the usage type.
 * @param rcMode            one of COBALT_H264_RC_* selecting the rate-control mode.
 * @param complexity        one of COBALT_H264_COMPLEXITY_* selecting the speed.
 * @param temporalLayers    the temporal scalability layer count (1 is single-layer).
 * @param intraPeriod       the intra (key-frame) period in frames, or 0 for
 *                          request-only key frames.
 * @param minQp             the minimum quantizer the encoder may pick.
 * @param maxQp             the maximum quantizer the encoder may pick.
 * @param idrBitrateRatio   the percentage by which a key frame's byte budget
 *                          exceeds an inter frame's.
 * @param frameSkip         non-zero to allow the rate controller to drop frames.
 * @param longTermReference non-zero to enable long-term reference frames.
 * @param outCtx            receives the created encoder handle on success, or is
 *                          left holding NULL on failure; must not be NULL.
 * @return COBALT_H264_OK on success, COBALT_H264_BAD_PARAM for a NULL outCtx,
 *         COBALT_H264_NOMEM if the handle could not be allocated,
 *         COBALT_H264_CREATE_FAIL if WelsCreateSVCEncoder fails or returns null,
 *         COBALT_H264_NATIVE_ERROR if GetDefaultParams or InitializeExt fails.
 */
int32_t cobalt_h264_encoder_create(int32_t width,
                                   int32_t height,
                                   int32_t targetBitrateBps,
                                   int32_t maxBitrateBps,
                                   int32_t frameRate,
                                   int32_t usageType,
                                   int32_t rcMode,
                                   int32_t complexity,
                                   int32_t temporalLayers,
                                   int32_t intraPeriod,
                                   int32_t minQp,
                                   int32_t maxQp,
                                   int32_t idrBitrateRatio,
                                   int32_t frameSkip,
                                   int32_t longTermReference,
                                   void **outCtx);
/**
 * Reconfigures the live encoder's bitrate and frame rate without recreating the
 * encoder.
 *
 * The wrapper drives the encoder vtable SetOption slot twice: once with
 * ENCODER_OPTION_BITRATE and a C-side SBitrateInfo targeting all spatial layers
 * (SPATIAL_LAYER_ALL) carrying targetBitrateBps, then once with
 * ENCODER_OPTION_FRAME_RATE and a C-side float carrying frameRate. These are the
 * two knobs openh264 accepts on a live encoder; changing the quantizer window,
 * frame skip, or the IDR bitrate ratio requires recreating the encoder and is
 * not done here.
 *
 * @param ctx              the encoder handle from cobalt_h264_encoder_create.
 * @param targetBitrateBps the new target bitrate in bits per second.
 * @param frameRate        the new maximum frame rate in frames per second.
 * @return COBALT_H264_OK on success, COBALT_H264_BAD_PARAM for a NULL ctx,
 *         COBALT_H264_NATIVE_ERROR if either SetOption call fails.
 */
int32_t cobalt_h264_encoder_set_rates(void *ctx,
                                      int32_t targetBitrateBps,
                                      int32_t frameRate);