modules/lib/src/main/java/com/github/auties00/cobalt/calls/media/video/codec/h264/bindings/CobaltOpenH264.java

// Generated by jextract

package com.github.auties00.cobalt.calls.media.video.codec.h264.bindings;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class CobaltOpenH264 {

    CobaltOpenH264() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();
    static final boolean TRACE_DOWNCALLS = Boolean.getBoolean("jextract.trace.downcalls");

    static void traceDowncall(String name, Object... args) {
         String traceArgs = Arrays.stream(args)
                       .map(Object::toString)
                       .collect(Collectors.joining(", "));
         System.out.printf("%s(%s)\n", name, traceArgs);
    }

    static MemorySegment findOrThrow(String symbol) {
        return SYMBOL_LOOKUP.find(symbol)
            .orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol: " + symbol));
    }

    static MethodHandle upcallHandle(Class<?> fi, String name, FunctionDescriptor fdesc) {
        try {
            return MethodHandles.lookup().findVirtual(fi, name, fdesc.toMethodType());
        } catch (ReflectiveOperationException ex) {
            throw new AssertionError(ex);
        }
    }

    static MemoryLayout align(MemoryLayout layout, long align) {
        return switch (layout) {
            case PaddingLayout p -> p;
            case ValueLayout v -> v.withByteAlignment(align);
            case GroupLayout g -> {
                MemoryLayout[] alignedMembers = g.memberLayouts().stream()
                        .map(m -> align(m, align)).toArray(MemoryLayout[]::new);
                yield g instanceof StructLayout ?
                        MemoryLayout.structLayout(alignedMembers) : MemoryLayout.unionLayout(alignedMembers);
            }
            case SequenceLayout s -> MemoryLayout.sequenceLayout(s.elementCount(), align(s.elementLayout(), align));
        };
    }

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    public static final ValueLayout.OfBoolean C_BOOL = ValueLayout.JAVA_BOOLEAN;
    public static final ValueLayout.OfByte C_CHAR = ValueLayout.JAVA_BYTE;
    public static final ValueLayout.OfShort C_SHORT = ValueLayout.JAVA_SHORT;
    public static final ValueLayout.OfInt C_INT = ValueLayout.JAVA_INT;
    public static final ValueLayout.OfLong C_LONG_LONG = ValueLayout.JAVA_LONG;
    public static final ValueLayout.OfFloat C_FLOAT = ValueLayout.JAVA_FLOAT;
    public static final ValueLayout.OfDouble C_DOUBLE = ValueLayout.JAVA_DOUBLE;
    public static final AddressLayout C_POINTER = ValueLayout.ADDRESS
            .withTargetLayout(MemoryLayout.sequenceLayout(java.lang.Long.MAX_VALUE, JAVA_BYTE));
    public static final ValueLayout.OfLong C_LONG = ValueLayout.JAVA_LONG;
    private static final int COBALT_H264_USAGE_CAMERA_REALTIME = (int)0L;
    /**
     * {@snippet lang=c :
     * #define COBALT_H264_USAGE_CAMERA_REALTIME 0
     * }
     */
    public static int COBALT_H264_USAGE_CAMERA_REALTIME() {
        return COBALT_H264_USAGE_CAMERA_REALTIME;
    }
    private static final int COBALT_H264_USAGE_SCREEN_REALTIME = (int)1L;
    /**
     * {@snippet lang=c :
     * #define COBALT_H264_USAGE_SCREEN_REALTIME 1
     * }
     */
    public static int COBALT_H264_USAGE_SCREEN_REALTIME() {
        return COBALT_H264_USAGE_SCREEN_REALTIME;
    }
    private static final int COBALT_H264_RC_QUALITY = (int)0L;
    /**
     * {@snippet lang=c :
     * #define COBALT_H264_RC_QUALITY 0
     * }
     */
    public static int COBALT_H264_RC_QUALITY() {
        return COBALT_H264_RC_QUALITY;
    }
    private static final int COBALT_H264_RC_BITRATE = (int)1L;
    /**
     * {@snippet lang=c :
     * #define COBALT_H264_RC_BITRATE 1
     * }
     */
    public static int COBALT_H264_RC_BITRATE() {
        return COBALT_H264_RC_BITRATE;
    }
    private static final int COBALT_H264_RC_BUFFERBASED = (int)2L;
    /**
     * {@snippet lang=c :
     * #define COBALT_H264_RC_BUFFERBASED 2
     * }
     */
    public static int COBALT_H264_RC_BUFFERBASED() {
        return COBALT_H264_RC_BUFFERBASED;
    }
    private static final int COBALT_H264_RC_TIMESTAMP = (int)3L;
    /**
     * {@snippet lang=c :
     * #define COBALT_H264_RC_TIMESTAMP 3
     * }
     */
    public static int COBALT_H264_RC_TIMESTAMP() {
        return COBALT_H264_RC_TIMESTAMP;
    }
    private static final int COBALT_H264_COMPLEXITY_LOW = (int)0L;
    /**
     * {@snippet lang=c :
     * #define COBALT_H264_COMPLEXITY_LOW 0
     * }
     */
    public static int COBALT_H264_COMPLEXITY_LOW() {
        return COBALT_H264_COMPLEXITY_LOW;
    }
    private static final int COBALT_H264_COMPLEXITY_MEDIUM = (int)1L;
    /**
     * {@snippet lang=c :
     * #define COBALT_H264_COMPLEXITY_MEDIUM 1
     * }
     */
    public static int COBALT_H264_COMPLEXITY_MEDIUM() {
        return COBALT_H264_COMPLEXITY_MEDIUM;
    }
    private static final int COBALT_H264_COMPLEXITY_HIGH = (int)2L;
    /**
     * {@snippet lang=c :
     * #define COBALT_H264_COMPLEXITY_HIGH 2
     * }
     */
    public static int COBALT_H264_COMPLEXITY_HIGH() {
        return COBALT_H264_COMPLEXITY_HIGH;
    }
    private static final int COBALT_H264_OK = (int)0L;
    /**
     * {@snippet lang=c :
     * #define COBALT_H264_OK 0
     * }
     */
    public static int COBALT_H264_OK() {
        return COBALT_H264_OK;
    }

    private static class cobalt_h264_version {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_POINTER    );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_version");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *cobalt_h264_version()
     * }
     */
    public static FunctionDescriptor cobalt_h264_version$descriptor() {
        return cobalt_h264_version.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *cobalt_h264_version()
     * }
     */
    public static MethodHandle cobalt_h264_version$handle() {
        return cobalt_h264_version.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *cobalt_h264_version()
     * }
     */
    public static MemorySegment cobalt_h264_version$address() {
        return cobalt_h264_version.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *cobalt_h264_version()
     * }
     */
    public static MemorySegment cobalt_h264_version() {
        var mh$ = cobalt_h264_version.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_h264_version");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_h264_encoder_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_encoder_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_create(int32_t width, int32_t height, int32_t targetBitrateBps, int32_t maxBitrateBps, int32_t frameRate, int32_t usageType, int32_t rcMode, int32_t complexity, int32_t temporalLayers, int32_t intraPeriod, int32_t minQp, int32_t maxQp, int32_t idrBitrateRatio, int32_t frameSkip, int32_t longTermReference, void **outCtx)
     * }
     */
    public static FunctionDescriptor cobalt_h264_encoder_create$descriptor() {
        return cobalt_h264_encoder_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_create(int32_t width, int32_t height, int32_t targetBitrateBps, int32_t maxBitrateBps, int32_t frameRate, int32_t usageType, int32_t rcMode, int32_t complexity, int32_t temporalLayers, int32_t intraPeriod, int32_t minQp, int32_t maxQp, int32_t idrBitrateRatio, int32_t frameSkip, int32_t longTermReference, void **outCtx)
     * }
     */
    public static MethodHandle cobalt_h264_encoder_create$handle() {
        return cobalt_h264_encoder_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_create(int32_t width, int32_t height, int32_t targetBitrateBps, int32_t maxBitrateBps, int32_t frameRate, int32_t usageType, int32_t rcMode, int32_t complexity, int32_t temporalLayers, int32_t intraPeriod, int32_t minQp, int32_t maxQp, int32_t idrBitrateRatio, int32_t frameSkip, int32_t longTermReference, void **outCtx)
     * }
     */
    public static MemorySegment cobalt_h264_encoder_create$address() {
        return cobalt_h264_encoder_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_h264_encoder_create(int32_t width, int32_t height, int32_t targetBitrateBps, int32_t maxBitrateBps, int32_t frameRate, int32_t usageType, int32_t rcMode, int32_t complexity, int32_t temporalLayers, int32_t intraPeriod, int32_t minQp, int32_t maxQp, int32_t idrBitrateRatio, int32_t frameSkip, int32_t longTermReference, void **outCtx)
     * }
     */
    public static int cobalt_h264_encoder_create(int width, int height, int targetBitrateBps, int maxBitrateBps, int frameRate, int usageType, int rcMode, int complexity, int temporalLayers, int intraPeriod, int minQp, int maxQp, int idrBitrateRatio, int frameSkip, int longTermReference, MemorySegment outCtx) {
        var mh$ = cobalt_h264_encoder_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_h264_encoder_create", width, height, targetBitrateBps, maxBitrateBps, frameRate, usageType, rcMode, complexity, temporalLayers, intraPeriod, minQp, maxQp, idrBitrateRatio, frameSkip, longTermReference, outCtx);
            }
            return (int)mh$.invokeExact(width, height, targetBitrateBps, maxBitrateBps, frameRate, usageType, rcMode, complexity, temporalLayers, intraPeriod, minQp, maxQp, idrBitrateRatio, frameSkip, longTermReference, outCtx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_h264_encoder_set_rates {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_POINTER,
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_encoder_set_rates");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
